--- a/test.ipynb
+++ b/test.ipynb
@@ -1610,9 +1610,188 @@
     "    def decr(self, delta=1):\n",
     "        # with为了自动解锁，建立互斥\n",
     "        with self._value_lock:\n",
-    "            self._value -= delta \n",
+    "            self._value -= delta\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-98-722eb17253b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubmit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mecho_client\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient_sock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient_addr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mecho_server\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-98-722eb17253b1>\u001b[0m in \u001b[0;36mecho_server\u001b[0;34m(addr)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0msock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlisten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mclient_sock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient_addr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccept\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m         \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubmit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mecho_client\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient_sock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient_addr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/socket.py\u001b[0m in \u001b[0;36maccept\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    203\u001b[0m         \u001b[0mFor\u001b[0m \u001b[0mIP\u001b[0m \u001b[0msockets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthe\u001b[0m \u001b[0maddress\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhostaddr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         \"\"\"\n\u001b[0;32m--> 205\u001b[0;31m         \u001b[0mfd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maddr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accept\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    206\u001b[0m         \u001b[0;31m# If our type has the SOCK_NONBLOCK flag, we shouldn't pass it onto the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m         \u001b[0;31m# new socket. We do not currently allow passing SOCK_NONBLOCK to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# 创建一个线程池\n",
+    "from socket import AF_INET, SOCK_STREAM, socket\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
+    "def echo_client(sock, client_addr):\n",
+    "    '''\n",
+    "    Handle a client connection\n",
+    "    '''\n",
+    "    print('Got connection from', client_addr)\n",
+    "    while True:\n",
+    "        msg = sock.recv(65536)\n",
+    "        if not msg:\n",
+    "            break\n",
+    "        sock.sendall(msg)\n",
+    "    print('Client closed connection')\n",
+    "    sock.close()\n",
+    "\n",
+    "def echo_server(addr):\n",
+    "    pool = ThreadPoolExecutor(128)\n",
+    "    sock = socket(AF_INET, SOCK_STREAM)\n",
+    "    sock.bind(addr)\n",
+    "    sock.listen(5)\n",
+    "    while True:\n",
+    "        client_sock, client_addr = sock.accept()\n",
+    "        pool.submit(echo_client, client_sock, client_addr)\n",
+    "\n",
+    "echo_server(('',15000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "k k\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import Queue\n",
+    "\n",
+    "q = Queue()\n",
+    "q.put(\"kk\", \"kkkkkkk\")\n",
+    "sock, client_addr = q.get()\n",
+    "print(sock, client_addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading, queue\n",
+    "\n",
+    "q = queue.Queue()\n",
+    "\n",
+    "def worker():\n",
+    "    while True:\n",
+    "        item = q.get()\n",
+    "        print(f'Working on {item}')\n",
+    "        print(f'Finished {item}')\n",
+    "        q.task_done()\n",
+    "\n",
+    "# turn-on the worker thread\n",
+    "threading.Thread(target=worker, daemon=True).start()\n",
+    "\n",
+    "# send thirty task requests to the worker\n",
+    "for item in range(30):\n",
+    "    q.put(item)\n",
+    "print('All task requests sent\\n', end='')\n",
+    "\n",
+    "# block until all tasks are done\n",
+    "q.join()\n",
+    "print('All work completed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "msg[1]: 'kkkk'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "class Exchange:\n",
+    "    def __init__(self):\n",
+    "        self._subscribers = set()\n",
+    "\n",
+    "    def attach(self, task):\n",
+    "        self._subscribers.add(task)\n",
+    "\n",
+    "    def detach(self, task):\n",
+    "        self._subscribers.remove(task)\n",
+    "\n",
+    "    def send(self, msg):\n",
+    "        for subscriber in self._subscribers:\n",
+    "            subscriber.send(msg)\n",
+    "\n",
+    "# Dictionary of all created exchanges\n",
+    "_exchanges = defaultdict(Exchange)\n",
+    "\n",
+    "# Return the Exchange instance associated with a given name\n",
+    "def get_exchange(name):\n",
+    "    return _exchanges[name]\n",
+    "\n",
+    "\n",
+    "# Example of a task.  Any object with a send() method\n",
+    "\n",
+    "class Task:\n",
+    "    ...\n",
+    "    def send(self, msg):\n",
+    "        ...\n",
+    "\n",
+    "task_a = Task()\n",
+    "task_b = Task()\n",
+    "\n",
+    "# Example of getting an exchange\n",
+    "exc = get_exchange('name')\n",
+    "\n",
+    "# Examples of subscribing tasks to it\n",
+    "exc.attach(task_a)\n",
+    "exc.attach(task_b)\n",
+    "\n",
+    "# Example of sending messages\n",
+    "exc.send('msg1')\n",
+    "exc.send('msg2')\n",
+    "\n",
+    "# Example of unsubscribing\n",
+    "exc.detach(task_a)\n",
+    "exc.detach(task_b)\n",
+    "\n",
+    "\n",
+    "class DisplayMessages:\n",
+    "    def __init__(self):\n",
+    "        self.count = 0\n",
+    "    def send(self, msg):\n",
+    "        self.count += 1\n",
+    "        print('msg[{}]: {!r}'.format(self.count, msg))\n",
+    "\n",
+    "exc = get_exchange('name')\n",
+    "d = DisplayMessages()\n",
+    "exc.attach(d)\n",
+    "\n",
+    "exc.send('kkkk')"
    ]
   },
   {
