订阅通过上下文管理器

--- a/test.ipynb
+++ b/test.ipynb
@@ -1730,6 +1730,7 @@
     }
    ],
    "source": [
+    "# 消息订阅/发布功能\n",
     "from collections import defaultdict\n",
     "\n",
     "class Exchange:\n",
@@ -1792,6 +1793,71 @@
     "exc.attach(d)\n",
     "\n",
     "exc.send('kkkk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "msg[1]: 'kkkk'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 消息订阅/发布功能  通过上下文管理期进行处理。\n",
+    "from collections import defaultdict\n",
+    "from contextlib import contextmanager\n",
+    "\n",
+    "class Exchange:\n",
+    "    def __init__(self):\n",
+    "        self._subscribers = set()\n",
+    "\n",
+    "    def attach(self, task):\n",
+    "        self._subscribers.add(task)\n",
+    "\n",
+    "    def detach(self, task):\n",
+    "        self._subscribers.remove(task)\n",
+    "    \n",
+    "    @contextmanager\n",
+    "    def subscribe(self, *tasks):\n",
+    "        for task in tasks:\n",
+    "            self.attach(task)\n",
+    "        try:\n",
+    "            yield\n",
+    "        finally:\n",
+    "            for task in tasks:\n",
+    "                self.detach(task)\n",
+    "\n",
+    "    def send(self, msg):\n",
+    "        for subscriber in self._subscribers:\n",
+    "            subscriber.send(msg)\n",
+    "\n",
+    "# Dictionary of all created exchanges\n",
+    "_exchanges = defaultdict(Exchange)\n",
+    "\n",
+    "# Return the Exchange instance associated with a given name\n",
+    "def get_exchange(name):\n",
+    "    return _exchanges[name]\n",
+    "\n",
+    "\n",
+    "\n",
+    "class DisplayMessages:\n",
+    "    def __init__(self):\n",
+    "        self.count = 0\n",
+    "    def send(self, msg):\n",
+    "        self.count += 1\n",
+    "        print('msg[{}]: {!r}'.format(self.count, msg))\n",
+    "\n",
+    "exc = get_exchange('name')\n",
+    "d = DisplayMessages()\n",
+    "\n",
+    "with exc.subscribe(d):\n",
+    "    exc.send('kkkk')"
    ]
   },
   {
