--- a/test.ipynb
+++ b/test.ipynb
@@ -1862,6 +1862,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def countdown(n):\n",
+    "    while n > 0:\n",
+    "        print('T-minus', n)\n",
+    "        yield\n",
+    "        n -= 1\n",
+    "    print('Blastoff!')\n",
+    "\n",
+    "\n",
+    "def countup(n):\n",
+    "    x = 0\n",
+    "    while x < n:\n",
+    "        print('Counting up', x)\n",
+    "        yield\n",
+    "        x += 1\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import queue\n",
+    "import socket\n",
+    "import os\n",
+    "\n",
+    "class PollableQueue(queue.Queue):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # Create a pair of connected sockets\n",
+    "        if os.name == 'posix':\n",
+    "            self._putsocket, self._getsocket = socket.socketpair()\n",
+    "        else:\n",
+    "            # Compatibility on non-POSIX systems\n",
+    "            server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "            server.bind(('127.0.0.1', 0))\n",
+    "            server.listen(1)\n",
+    "            self._putsocket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "            self._putsocket.connect(server.getsockname())\n",
+    "            self._getsocket, _ = server.accept()\n",
+    "            server.close()\n",
+    "\n",
+    "    def fileno(self):\n",
+    "        return self._getsocket.fileno()\n",
+    "\n",
+    "    def put(self, item):\n",
+    "        super().put(item)\n",
+    "        self._putsocket.send(b'x')\n",
+    "\n",
+    "    def get(self):\n",
+    "        self._getsocket.recv(1)\n",
+    "        return super().get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "It failed!\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "SystemExit",
+     "evalue": "1",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.stderr.write('It failed!\\n')\n",
+    "raise SystemExit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'svc_login' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-140-33dd33ca7f16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpasswd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0msvc_login\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpasswd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# You must write svc_login()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Yay!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'svc_login' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import getpass\n",
+    "\n",
+    "user = getpass.getuser()\n",
+    "passwd = getpass.getpass()\n",
+    "\n",
+    "if svc_login(user, passwd):    # You must write svc_login()\n",
+    "   print('Yay!')\n",
+    "else:\n",
+    "   print('Boo!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "OSError",
+     "evalue": "[Errno 25] Inappropriate ioctl for device",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-144-f586b7dd7936>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_terminal_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# sz.columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 25] Inappropriate ioctl for device"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "sz = os.get_terminal_size()\n",
+    "sz\n",
+    "# sz.columns\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "__pycache__\nchack_username.py\nhello_report.py\nlogcat_findout_crash.bat\nmy_calendar.py\nmysql_test.py\nnew_sunspots_roto.py\nphonebook.py\nsunspots_roto.py\ntest.ipynb\ntest_data_time.py\ntest_strftime.py\ntests.py\nuse_bs4_damo.py\nutil_test.py\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "# out_bytes = subprocess.check_output(['netstat','-a'])\n",
+    "out_bytes = subprocess.check_output(['ls'])\n",
+    "out_text = out_bytes.decode('utf-8')\n",
+    "print(out_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.601160301011987\n4.647870523040183\n0.04697919904720038\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 实现一个计时器\n",
+    "import time\n",
+    "\n",
+    "class Timer:\n",
+    "    def __init__(self, func=time.perf_counter):\n",
+    "        self.elapsed = 0.0\n",
+    "        self._func = func\n",
+    "        self._start = None\n",
+    "\n",
+    "    def start(self):\n",
+    "        if self._start is not None:\n",
+    "            raise RuntimeError('Already started')\n",
+    "        self._start = self._func()\n",
+    "\n",
+    "    def stop(self):\n",
+    "        if self._start is None:\n",
+    "            raise RuntimeError('Not started')\n",
+    "        end = self._func()\n",
+    "        self.elapsed += end - self._start\n",
+    "        self._start = None\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.elapsed = 0.0\n",
+    "\n",
+    "    # @property\n",
+    "    # def running(self):\n",
+    "    #     return self._start is not None\n",
+    "\n",
+    "    def __enter__(self):\n",
+    "        self.start()\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, *args):\n",
+    "        self.stop() \n",
+    "\n",
+    "\n",
+    "def countdown(n):\n",
+    "    while n > 0:\n",
+    "        n -= 1\n",
+    "\n",
+    "# Use 1: Explicit start/stop\n",
+    "t = Timer()\n",
+    "t.start()\n",
+    "countdown(100000000)\n",
+    "t.stop()\n",
+    "print(t.elapsed)\n",
+    "\n",
+    "# Use 2: As a context manager\n",
+    "with t:\n",
+    "    countdown(1000000)\n",
+    "\n",
+    "print(t.elapsed)\n",
+    "\n",
+    "with Timer() as t2:\n",
+    "    countdown(1000000)\n",
+    "print(t2.elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
