fix:新增魔术方法

--- a/test.ipynb
+++ b/test.ipynb
@@ -2548,12 +2548,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['773-555-1212', '847-555-1212']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 解压可迭代对象赋值给多个变量\n",
+    "record = ('Dave', 'dave@example.com', '773-555-1212', '847-555-1212')\n",
+    "name, email, *phone_numbers = record\n",
+    "print(phone_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FrenchDeck' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-60e020cdb502>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeck\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspades_high\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-31-60e020cdb502>\u001b[0m in \u001b[0;36mspades_high\u001b[0;34m(card)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mspades_high\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0mrank_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFrenchDeck\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrank\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrank_value\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msuit_values\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msuit_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msuit\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FrenchDeck' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "from random import choice\n",
+    "# 随机抽牌的逻辑\n",
+    "card = collections.namedtuple('card', ['rank', 'suit'])\n",
+    "\n",
+    "class frenchdeck:\n",
+    "    ranks = [str(n) for n in range(2, 11)] + list('JQKA') \n",
+    "    suits = 'spades diamonds clubs hearts'.split()\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._cards = [card(rank, suit) for suit in self.suits for rank in self.ranks] \n",
+    "    def __len__(self):\n",
+    "        return len(self._cards)\n",
+    "\n",
+    "    def __getitem__(self, position): \n",
+    "        return self._cards[position]\n",
+    "\n",
+    "beer_card = card('7', 'diamonds')\n",
+    "beer_card\n",
+    "\n",
+    "deck = frenchdeck()\n",
+    "len(deck)\n",
+    "\n",
+    "deck[0]\n",
+    "\n",
+    "choice(deck)\n",
+    "\n",
+    "suit_values = dict(spades=3, hearts=2, diamonds=1, clubs=0)\n",
+    "\n",
+    "\n",
+    "def spades_high(card):\n",
+    "    rank_value = frenchdeck.ranks.index(card.rank)\n",
+    "    return rank_value * len(suit_values) + suit_values[card.suit]\n",
+    "\n",
+    "\n",
+    "for card in sorted(deck, key=spades_high):\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spades': 3, 'hearts': 2, 'diamonds': 1, 'clubs': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "suit_values = dict(spades=3, hearts=2, diamonds=1, clubs=0)\n",
+    "print(suit_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -2565,8 +2659,16 @@
    "name": "python365jvsc74a57bd096a6eacb5c94b6d508e54c04401eea302ffcad6f35d7d2f6c0027f12074a271b"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   },
   "orig_nbformat": 4
  },
