--- a/test.ipynb
+++ b/test.ipynb
@@ -2751,6 +2751,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 容器序列  存放的是它们所包含的任意类型的对象的引用\n",
     "# list、 tuple、 collections.deque 这些能存放不同类型的数据\n",
@@ -2762,17 +2769,158 @@
     "# list、bytearray、array.array、 collections.deque、 memoryview\n",
     "\n",
     "# 不可变序列\n",
-    "# tuple、str、bytes\n"
+    "# tuple、str、bytes\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "[11]\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "mydata = threading.local()\n",
+    "mydata.number = 32\n",
+    "print(mydata.number)\n",
+    "log = []\n",
+    "\n",
+    "def f():\n",
+    "    mydata.number = 11\n",
+    "    log.append(mydata.number)\n",
+    "\n",
+    "thread = threading.Thread(target=f)\n",
+    "thread.start()\n",
+    "thread.join()\n",
+    "print(log)\n",
+    "print(mydata.number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roundd1\n",
+      "roundd2\n",
+      "roundd3\n",
+      "only 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from blinker import signal\n",
+    "\n",
+    "started = signal('test-start')\n",
+    "\n",
+    "def each(round):\n",
+    "    print('roundd{}'.format(round))\n",
+    "\n",
+    "def round_two(round):\n",
+    "    print('only {}'.format(round))\n",
+    "\n",
+    "\n",
+    "started.connect(each)\n",
+    "started.connect(round_two, sender=3)\n",
+    "\n",
+    "\n",
+    "for round in range(1, 4):\n",
+    "    started.send(round)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roundd1\n",
+      "roundd2\n",
+      "roundd3\n",
+      "only 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from blinker import Namespace\n",
+    "web_signals = Namespace()\n",
+    "large_file_saved = web_signals.signal('large-file-saved')\n",
+    "\n",
+    "\n",
+    "def each(round):\n",
+    "    print('roundd{}'.format(round))\n",
+    "\n",
+    "def round_two(round):\n",
+    "    print('only {}'.format(round))\n",
+    "\n",
+    "\n",
+    "large_file_saved.connect(each)\n",
+    "large_file_saved.connect(round_two, sender=3)\n",
+    "\n",
+    "\n",
+    "for round in range(1, 4):\n",
+    "    large_file_saved.send(round)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "# 查看CPU核数\n",
+    "print(multiprocessing.cpu_count()*2+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "7c24c388e074a4120d448b91d05bbff6890cc467bf4030ff9e482385d345b628"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.5 64-bit ('pytestdemo': virtualenvwrapper)",
-   "name": "python365jvsc74a57bd096a6eacb5c94b6d508e54c04401eea302ffcad6f35d7d2f6c0027f12074a271b"
+   "display_name": "Python 3.7.7 64-bit ('python37': pyenv)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2784,7 +2932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.7"
   },
   "orig_nbformat": 4
  },
