--- a/test.ipynb
+++ b/test.ipynb
@@ -2748,13 +2748,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -2901,10 +2894,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('i', [97, 102, 100, 97, 102, 97, 115, 102])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import array\n",
+    "aa = 'afdafasf'\n",
+    "array.array('i', (ord(i) for i in aa))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': [1, 2], 'b': [4]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {} # 一个普通的字典\n",
+    "d.setdefault('a', []).append(1)\n",
+    "d.setdefault('a', []).append(2)\n",
+    "d.setdefault('b', []).append(4)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'idrsa.pub'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 取余数和除数\n",
+    "divmod(20,8)\n",
+    "\n",
+    "# 获取文件名\n",
+    "import os \n",
+    "_, filename = os.path.split(\"/home/jerry/.ssh/idrsa.pub\")\n",
+    "filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           0 LOAD_NAME                0 (s)\n",
+      "              2 LOAD_NAME                1 (a)\n",
+      "              4 DUP_TOP_TWO\n",
+      "              6 BINARY_SUBSCR\n",
+      "              8 LOAD_NAME                2 (b)\n",
+      "             10 INPLACE_ADD\n",
+      "             12 ROT_THREE\n",
+      "             14 STORE_SUBSCR\n",
+      "             16 LOAD_CONST               0 (None)\n",
+      "             18 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dis\n",
+    "dis.dis('s[a]+=b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "demo: bisect_right\n",
+      "haystack ->    1  4  5  6  8 12 15 20 21 23 23 26 29 30\n",
+      "31 @ 14        |  |  |  |  |  |  |  |  |  |  |  |  |  |31\n",
+      "30 @ 14        |  |  |  |  |  |  |  |  |  |  |  |  |  |30\n",
+      "29 @ 13        |  |  |  |  |  |  |  |  |  |  |  |  |29\n",
+      "23 @ 11        |  |  |  |  |  |  |  |  |  |  |23\n",
+      "22 @  9        |  |  |  |  |  |  |  |  |22\n",
+      "10 @  5        |  |  |  |  |10\n",
+      " 8 @  5        |  |  |  |  |8 \n",
+      " 5 @  3        |  |  |5 \n",
+      " 2 @  1        |2 \n",
+      " 1 @  1        |1 \n",
+      " 0 @  0      0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "import sys\n",
+    "\n",
+    "HAYSTACK = [1, 4, 5, 6, 8, 12, 15, 20, 21, 23, 23, 26, 29, 30]\n",
+    "NEEDLES = [0, 1, 2, 5, 8, 10, 22, 23, 29, 30, 31]\n",
+    "\n",
+    "\n",
+    "ROW_FMT = '{0:2d} @ {1:2d}      {2}{0:<2d}'\n",
+    "\n",
+    "def demo(bisect_fn):\n",
+    "    for needle in reversed(NEEDLES):\n",
+    "        position = bisect_fn(HAYSTACK, needle)\n",
+    "        offset = position * '  |'\n",
+    "        print(ROW_FMT.format(needle, position, offset))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    if sys.argv[-1] == 'left':\n",
+    "        bisect_fn = bisect.bisect_left\n",
+    "    else:\n",
+    "        bisect_fn = bisect.bisect\n",
+    "    \n",
+    "    print('demo:', bisect_fn.__name__)\n",
+    "    print('haystack -> ', ''.join('%3d' % n for n in HAYSTACK))\n",
+    "    demo(bisect_fn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F', 'A', 'C', 'C', 'B', 'A', 'A']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "def grade(score, breakpoints = [60, 70, 80, 90], grades='FDCBA'):\n",
+    "    i = bisect.bisect(breakpoints, score)\n",
+    "    return(grades[i]) \n",
+    "\n",
+    "[grade(score) for score in [33, 99, 77, 70, 89, 90, 100]]\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
