--- a/test.ipynb
+++ b/test.ipynb
@@ -3042,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3051,7 +3051,7 @@
        "['F', 'A', 'C', 'C', 'B', 'A', 'A']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3061,10 +3061,370 @@
     "\n",
     "def grade(score, breakpoints = [60, 70, 80, 90], grades='FDCBA'):\n",
     "    i = bisect.bisect(breakpoints, score)\n",
-    "    return(grades[i]) \n",
+    "    return grades[i] \n",
     "\n",
     "[grade(score) for score in [33, 99, 77, 70, 89, 90, 100]]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 -> [10]\n",
+      " 0 -> [0, 10]\n",
+      " 6 -> [0, 6, 10]\n",
+      " 8 -> [0, 6, 8, 10]\n",
+      " 7 -> [0, 6, 7, 8, 10]\n",
+      " 2 -> [0, 2, 6, 7, 8, 10]\n",
+      "10 -> [0, 2, 6, 7, 8, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "import random\n",
+    "\n",
+    "SIZE=7\n",
+    "\n",
+    "# 固定一个点\n",
+    "random.seed(1729)\n",
+    "\n",
+    "my_list = []\n",
+    "\n",
+    "for i in range(SIZE):\n",
+    "    new_item = random.randrange(SIZE*2)\n",
+    "    bisect.insort(my_list, new_item)\n",
+    "    print('%2d ->' % new_item, my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('h', [-2, -1, 1024, 1, 2])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import array\n",
+    "num =  array.array('h', [-2, -1, 0, 1, 2])\n",
+    "\n",
+    "memv = memoryview(num)\n",
+    "\n",
+    "len(memv)\n",
+    "\n",
+    "memv[0]\n",
+    "\n",
+    "memv_oct = memv.cast('B')\n",
+    "\n",
+    "memv_oct.tolist()\n",
+    "\n",
+    "memv_oct[5] = 4\n",
+    "\n",
+    "num\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  4,  8],\n",
+       "       [ 1,  5,  9],\n",
+       "       [ 2,  6, 10],\n",
+       "       [ 3,  7, 11]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(12)\n",
+    "type(a)\n",
+    "\n",
+    "a.shape\n",
+    "\n",
+    "a.shape = 3,4\n",
+    "a[:,1]\n",
+    "\n",
+    "# 把行和列交互，得到新数组\n",
+    "a.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([4, 5, 6, 7, 8, 9, 0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用双向队列\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "dq = deque(range(10), maxlen=10)\n",
+    "dq.rotate(-4)\n",
+    "# dq.appendleft(-1)\n",
+    "# dq.extend([11,22,33])\n",
+    "# dq.extendleft([10, 20, 30, 40])\n",
+    "dq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import abc\n",
+    "\n",
+    "my_dict = {}\n",
+    "isinstance(my_dict,abc.Mapping)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "985328935373711578"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tt = (1, 2, (30, 40))\n",
+    "hash(tt)\n",
+    "# tl = (1, 2, [30, 40])\n",
+    "# hash(tl)\n",
+    "tf = (1, 2, frozenset([30, 40]))\n",
+    "hash(tf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '--ip=127.0.0.1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/kg/cw15tcjx13v49pvr62fsvt380000gn/T/ipykernel_4189/2380618518.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcollections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"utf8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mline_no\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mWORD_RE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfinditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '--ip=127.0.0.1'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import re\n",
+    "import collections\n",
+    "\n",
+    "\n",
+    "WORD_RE = re.compile(r'\\w+')\n",
+    "\n",
+    "index = collections.defaultdict(list)\n",
+    "with open(sys.argv[1], encoding = \"utf8\") as fp:\n",
+    "    for line_no, line in enumerate(fp, 1):\n",
+    "        for match in WORD_RE.finditer(line):\n",
+    "            word = match.group()\n",
+    "            column_no = match.start() + 1\n",
+    "            location = (line_no, column_no)\n",
+    "            index[word].append(location)\n",
+    "\n",
+    "for word in sorted(index, key=str.upper):\n",
+    "    print(word, index[word])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "class StrKeyDict(collections.UserDict):\n",
+    "    def __missing__(self, key):\n",
+    "        if isinstance(key, str):\n",
+    "            raise KeyError(key)\n",
+    "        return self[str(key)]\n",
+    "\n",
+    "    def __contains__(self, key):\n",
+    "        return str(key) in self.data\n",
+    "\n",
+    "    def __setitem__(self, key, item):\n",
+    "        self.data[str(key)] = item\n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "frozenset({0, 1, 2, 3, 4, 5, 6, 7, 8, 9})"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frozenset(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'#',\n",
+       " '$',\n",
+       " '%',\n",
+       " '+',\n",
+       " '<',\n",
+       " '=',\n",
+       " '>',\n",
+       " '¢',\n",
+       " '£',\n",
+       " '¤',\n",
+       " '¥',\n",
+       " '§',\n",
+       " '©',\n",
+       " '¬',\n",
+       " '®',\n",
+       " '°',\n",
+       " '±',\n",
+       " 'µ',\n",
+       " '¶',\n",
+       " '×',\n",
+       " '÷'}"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from unicodedata import name\n",
+    "\n",
+    "{chr(i) for i in range(32, 256) if 'SIGN' in name(chr(i),'')}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'c'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cafe = bytes('café', encoding='utf_8')\n",
+    "cafe[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(b'GIF', b'89a', 600, 600)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 获取图片的宽度和高度。\n",
+    "import struct\n",
+    "fmt = '<3s3sHH'\n",
+    "\n",
+    "with open('/Users/jerryli/Desktop/img.gif', 'rb') as fp:\n",
+    "    img = memoryview(fp.read())\n",
+    "\n",
+    "header = img[:10]\n",
+    "# bytes(header)\n",
+    "struct.unpack(fmt, header)\n",
+    "# del header\n",
+    "# del img\n"
    ]
   },
   {
